# Transformer-from-scratch-tinygrad

./: .gitignore  README.md  adder.py  eng_es_translator.py  main.py  pyproject.toml  story_gen.py  transformer.py
src/: mixture_feedforward.py  transformer.py
