[project]
name = "transformer-from-scratch-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "tinygrad",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
tinygrad = { git = "https://github.com/tinygrad/tinygrad", rev = "8cc2d64edbd35203abdd52f02d814c26a6ee42b7" }
# tinygrad = { git = "https://github.com/tinygrad/tinygrad", rev = "3892ec8264122bc742fad79e75f5a4f83400bd90" }
